--- a/views/admin/categories/categories.ejs
+++ b/views/admin/categories/categories.ejs
@@ -1,4 +1,4 @@
-<div class="breadcrumb-option">
+<section class="breadcrumb-option">
   <div class="container">
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb breadcrumb-chevron p-3 bg-body-tertiary rounded-2">
@@ -38,6 +38,7 @@
       <thead>
         <tr class="text-center">
           <th scope="col">#</th>
+
           <th scope="col">Name</th>
           <th scope="col">Status</th>
           <th scope="col" class="text-center">Delete/Edit</th>
