--- a/views/layouts/adminLayout.ejs
+++ b/views/layouts/adminLayout.ejs
@@ -1,215 +1,210 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
-
-<!-- molla/index-8.html  22 Nov 2019 09:56:59 GMT -->
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title><%- locals.title ? locals.title:'Document' %></title>
-    <meta name="keywords" content="HTML5 Template">
-    <meta name="description" content="Molla - Bootstrap eCommerce Template">
-    <meta name="author" content="p-themes">
-    <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/icons/favicon-16x16.png">
-    <link rel="manifest" href="/assets/images/icons/site.html">
-    <link rel="mask-icon" href="/assets/images/icons/safari-pinned-tab.svg" color="#666666">
-    <link rel="shortcut icon" href="/assets/images/icons/favicon.ico">
-    <meta name="apple-mobile-web-app-title" content="ministore">
-    <meta name="application-name" content="Molla">
-    <meta name="msapplication-TileColor" content="#cc9966">
-    <meta name="msapplication-config" content="/assets/images/icons/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
-    <!-- Plugins CSS File -->
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/plugins/owl-carousel/owl.carousel.css">
-    <link rel="stylesheet" href="/assets/css/plugins/magnific-popup/magnific-popup.css">
-    <link rel="stylesheet" href="/assets/css/plugins/jquery.countdown.css">
-    <!-- Main CSS File -->
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/skins/skin-demo-8.css">
-    <link rel="stylesheet" href="/assets/css/demos/demo-8.css">
-    <style>
-        .bi {
-          display: inline-block;
-          width: 1rem;
-          height: 1rem;
-        }
-    
-        .breadcrumb-chevron {
-          --bs-breadcrumb-divider: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%236c757d'%3E%3Cpath fill-rule='evenodd' d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
-          gap: .5rem;
-        }
-    
-        .breadcrumb-chevron .breadcrumb-item {
-          display: flex;
-          gap: inherit;
-          align-items: center;
-          padding-left: 0;
-          line-height: 1;
-        }
-    
-        .breadcrumb-chevron .breadcrumb-item::before {
-          gap: inherit;
-          float: none;
-          width: 1rem;
-          height: 1rem;
-        }
-    
-        .breadcrumb-custom .breadcrumb-item {
-          position: relative;
-          flex-grow: 1;
-          padding: .75rem 3rem;
-        }
-    
-        .breadcrumb-custom .breadcrumb-item::before {
-          display: none;
-        }
-    
-        .breadcrumb-custom .breadcrumb-item::after {
-          position: absolute;
-          top: 50%;
-          right: -25px;
-          z-index: 1;
-          display: inline-block;
-          width: 50px;
-          height: 50px;
-          margin-top: -25px;
-          content: "";
-          background-color: var(--bs-tertiary-bg);
-          border-top-right-radius: .5rem;
-          box-shadow: 1px -1px var(--bs-border-color);
-          transform: scale(.707) rotate(45deg);
-        }
-    
-        .breadcrumb-custom .breadcrumb-item:first-child {
-          padding-left: 1.5rem;
-        }
-    
-        .breadcrumb-custom .breadcrumb-item:last-child {
-          padding-right: 1.5rem;
-        }
-    
-        .breadcrumb-custom .breadcrumb-item:last-child::after {
-          display: none;
-        }
-    
-        .bd-placeholder-img {
-          font-size: 1.125rem;
-          text-anchor: middle;
-          -webkit-user-select: none;
-          -moz-user-select: none;
-          -ms-user-select: none;
-          user-select: none;
-        }
-    
-        @media (min-width: 768px) {
-          .bd-placeholder-img-lg {
-            font-size: 3.5rem;
-          }
-        }
-    
-        .feather {
-          width: 16px;
-          height: 16px;
-          vertical-align: text-bottom;
-        }
-    
-        /* Sidebar*/
-    
-        .sidebar {
-          position: fixed;
-          top: 0;
-          bottom: 0;
-          left: 0;
-          z-index: 100;
-          /* Behind the navbar */
-          padding: 48px 0 0;
-          /* Height of navbar */
-          box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
-        }
-    
-        @media (max-width: 767.98px) {
-          .sidebar {
-            top: 5rem;
-          }
-        }
-    
-        .sidebar-sticky {
-          position: relative;
-          top: 0;
-          height: calc(100vh - 48px);
-          padding-top: .5rem;
-          overflow-x: hidden;
-          overflow-y: auto;
-          /* Scrollable contents if viewport is shorter than content. */
-        }
-    
-        .sidebar .nav-link {
-          font-weight: 500;
-          /* color: #333; */
-        }
-    
-        .sidebar .nav-link .feather {
-          margin-right: 4px;
-          /* color: #727272; */
-        }
-    
-        .sidebar .nav-link .active {
-          color: #007bff;
-        }
-    
-        .sidebar .nav-link:hover .feather,
-        .sidebar .nav-link.active .feather {
-          color: inherit;
-        }
-    
-        .sidebar-heading {
-          font-size: .75rem;
-          text-transform: uppercase;
-        }
-    
-        /*Navbar*/
-        .navbar-brand {
-          padding-top: .75rem;
-          padding-bottom: .75rem;
-          font-size: 1rem;
-          background-color: rgba(197, 230, 200, 0.25);
-          box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
-        }
-    
-        .navbar .navbar-toggler {
-          top: .25rem;
-          right: 1rem;
-        }
-    
-        .navbar .form-control {
-          padding: .75rem 1rem;
-          border-width: 0;
-          border-radius: 0;
-        }
-    
-        .form-control-dark {
-          color: #fff;
-          background-color: rgba(255, 255, 255, .1);
-          border-color: rgba(10, 66, 27, 0.1);
-        }
-    
-        .form-control-dark:focus {
-          border-color: transparent;
-          box-shadow: 0 0 0 3px rgba(6, 72, 37, 0.25);
-        }
-      </style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+  <meta name="generator" content="Hugo 0.72.0">
+  <title>Ministore - Admin</title>
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="/stylesheets/admin.css">
+  <link rel="stylesheet" href="/stylesheets/main.css">
+  <link rel="stylesheet" href="/stylesheets/validation.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+  <link href="https://unpkg.com/cropperjs@1.5.11/dist/cropper.min.css" rel="stylesheet">
+
+  <!-- <link rel="canonical" href="https://v5.getbootstrap.com/docs/5.0/examples/dashboard/"> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- <link rel="stylesheet" type="text/css" href="https://unpkg.com/file-upload-with-preview/dist/style.css" /> -->
+
+
+  <script src="https://unpkg.com/cropperjs@1.5.11/dist/cropper.min.js"></script>
+
+  <style>
+    .bi {
+      display: inline-block;
+      width: 1rem;
+      height: 1rem;
+    }
+
+    .breadcrumb-chevron {
+      --bs-breadcrumb-divider: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%236c757d'%3E%3Cpath fill-rule='evenodd' d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
+      gap: .5rem;
+    }
+
+    .breadcrumb-chevron .breadcrumb-item {
+      display: flex;
+      gap: inherit;
+      align-items: center;
+      padding-left: 0;
+      line-height: 1;
+    }
+
+    .breadcrumb-chevron .breadcrumb-item::before {
+      gap: inherit;
+      float: none;
+      width: 1rem;
+      height: 1rem;
+    }
+
+    .breadcrumb-custom .breadcrumb-item {
+      position: relative;
+      flex-grow: 1;
+      padding: .75rem 3rem;
+    }
+
+    .breadcrumb-custom .breadcrumb-item::before {
+      display: none;
+    }
+
+    .breadcrumb-custom .breadcrumb-item::after {
+      position: absolute;
+      top: 50%;
+      right: -25px;
+      z-index: 1;
+      display: inline-block;
+      width: 50px;
+      height: 50px;
+      margin-top: -25px;
+      content: "";
+      background-color: var(--bs-tertiary-bg);
+      border-top-right-radius: .5rem;
+      box-shadow: 1px -1px var(--bs-border-color);
+      transform: scale(.707) rotate(45deg);
+    }
+
+    .breadcrumb-custom .breadcrumb-item:first-child {
+      padding-left: 1.5rem;
+    }
+
+    .breadcrumb-custom .breadcrumb-item:last-child {
+      padding-right: 1.5rem;
+    }
+
+    .breadcrumb-custom .breadcrumb-item:last-child::after {
+      display: none;
+    }
+
+    .bd-placeholder-img {
+      font-size: 1.125rem;
+      text-anchor: middle;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+    }
+
+    @media (min-width: 768px) {
+      .bd-placeholder-img-lg {
+        font-size: 3.5rem;
+      }
+    }
+
+    .feather {
+      width: 16px;
+      height: 16px;
+      vertical-align: text-bottom;
+    }
+
+    /* Sidebar*/
+
+    .sidebar {
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      z-index: 100;
+      /* Behind the navbar */
+      padding: 48px 0 0;
+      /* Height of navbar */
+      box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+    }
+
+    @media (max-width: 767.98px) {
+      .sidebar {
+        top: 5rem;
+      }
+    }
+
+    .sidebar-sticky {
+      position: relative;
+      top: 0;
+      height: calc(100vh - 48px);
+      padding-top: .5rem;
+      overflow-x: hidden;
+      overflow-y: auto;
+      /* Scrollable contents if viewport is shorter than content. */
+    }
+
+    .sidebar .nav-link {
+      font-weight: 500;
+      color: #a2ec49;
+    }
+
+    .sidebar .nav-link .feather {
+      margin-right: 4px;
+      /* color: #727272; */
+    }
+
+    .sidebar .nav-link .active {
+      color: #b6ec4b;
+    }
+
+    .sidebar .nav-link:hover .feather,
+    .sidebar .nav-link.active .feather {
+      color: inherit;
+    }
+
+    .sidebar-heading {
+      font-size: .75rem;
+      text-transform: uppercase;
+    }
+
+    /*Navbar*/
+    .navbar-brand {
+      padding-top: .75rem;
+      padding-bottom: .75rem;
+      font-size: 1rem;
+      background-color: rgba(0, 0, 0, .25);
+      box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
+    }
+
+    .navbar .navbar-toggler {
+      top: .25rem;
+      right: 1rem;
+    }
+
+    .navbar .form-control {
+      padding: .75rem 1rem;
+      border-width: 0;
+      border-radius: 0;
+    }
+
+    .form-control-dark {
+      color: #fff;
+      background-color: rgba(255, 255, 255, .1);
+      border-color: rgba(255, 255, 255, .1);
+    }
+
+    .form-control-dark:focus {
+      border-color: transparent;
+      box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
+    }
+  </style>
 </head>
 
 <body>
-    <div class="page-wrapper">
+  <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
+    <symbol id="house-door-fill" viewBox="0 0 16 16">
+      <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5z" />
+    </symbol>
+  </svg>
+  <%- include('../partials/admin/header.ejs') %>
 
-        <%- include('../partials/admin/header.ejs') %>
-        <div class="container-fluid">
+  <div class="container-fluid">
     <div class="row">
       <% if (typeof admin !== 'undefined' ) { %>
       <%- include('../partials/admin/sidebar.ejs') %>
@@ -221,26 +216,25 @@
     </div>
   </div>
 
-    </main>
-</div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 
-    </div><!-- End .page-wrapper -->
-    
-    <!-- Plugins JS File -->
-    <script src="/assets/js/jquery.min.js"></script>
-    <script src="/assets/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/js/jquery.hoverIntent.min.js"></script>
-    <script src="/assets/js/jquery.waypoints.min.js"></script>
-    <script src="/assets/js/superfish.min.js"></script>
-    <script src="/assets/js/owl.carousel.min.js"></script>
-    <script src="/assets/js/jquery.plugin.min.js"></script>
-    <script src="/assets/js/jquery.magnific-popup.min.js"></script>
-    <script src="/assets/js/jquery.countdown.min.js"></script>
-    <!-- Main JS File -->
-    <script src="/assets/js/main.js"></script>
-    <script src="/assets/js/demos/demo-8.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
+  <!-- <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> -->
+
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.24.1/feather.min.js" integrity="sha384-EbSscX4STvYAC/DxHse8z5gEDaNiKAIGW+EpfzYTfQrgIlHywXXrM9SUIZ0BlyfF" crossorigin="anonymous"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js" integrity="sha384-i+dHPTzZw7YVZOx9lbH5l6lP74sLRtMtwN2XjVqjf3uAGAREAF4LMIUDTWEVs4LI" crossorigin="anonymous"></script> -->
+  <!-- <script src="/javascripts/dashboard.js"></script> -->
+  <script defer src="/js/admin/banners/banner.js"></script>
+  
+  
+ 
 </body>
 
-
-<!-- molla/index-8.html  22 Nov 2019 09:57:25 GMT -->
 </html>
