--- a/views/partials/admin/sidebar.ejs
+++ b/views/partials/admin/sidebar.ejs
@@ -20,34 +20,34 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="./admin/users/">
+                <a class="nav-link" href="admin/users/">
                     <span data-feather="users"></span>
                     Customers
                 </a>
             </li>
             
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="./admin/category" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="admin/category" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Category
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="./admin/category">All Categories</a></li>
-                  <li><a class="dropdown-item" href="./admin/category/add-category">Add Category</a></li>
+                  <li><a class="dropdown-item" href="admin/category">All Categories</a></li>
+                  <li><a class="dropdown-item" href="admin/category/add-category">Add Category</a></li>
                 </ul>
             </li>
 
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="./admin/products" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="admin/products" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Product
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="./admin/products">All Products</a></li>
-                  <li><a class="dropdown-item" href="./admin/products/add-product">Add Product</a></li>
+                  <li><a class="dropdown-item" href="admin/products">All Products</a></li>
+                  <li><a class="dropdown-item" href="admin/products/add-product">Add Product</a></li>
                 </ul>
             </li>
             
             <li class="nav-item">
-                <a class="nav-link" href="./admin/orders/">
+                <a class="nav-link" href="#">
                     <span data-feather="file"></span>
                     Orders
                 </a>
@@ -63,45 +63,8 @@
                     Reports
                 </a>
             </li>
-            <!-- <li class="nav-item">
-                <a class="nav-link" href="#">
-                    <span data-feather="layers"></span>
-                    Integrations
-                </a>
-            </li> -->
+            
         </ul>
 
-        <!-- <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-            <span>Saved reports</span>
-            <a class="link-secondary" href="#" aria-label="Add a new report">
-                <span data-feather="plus-circle"></span>
-            </a>
-        </h6>
-        <ul class="nav flex-column mb-2">
-            <li class="nav-item">
-                <a class="nav-link" href="#">
-                    <span data-feather="file-text"></span>
-                    Current month
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">
-                    <span data-feather="file-text"></span>
-                    Last quarter
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">
-                    <span data-feather="file-text"></span>
-                    Social engagement
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">
-                    <span data-feather="file-text"></span>
-                    Year-end sale
-                </a>
-            </li>
-        </ul> -->
     </div>
 </nav>
