--- a/views/partials/admin/sidebar.ejs
+++ b/views/partials/admin/sidebar.ejs
@@ -20,29 +20,29 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="admin/users/">
+                <a class="nav-link" href="/admin/users/">
                     <span data-feather="users"></span>
                     Customers
                 </a>
             </li>
             
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="admin/category" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="/admin/category" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Category
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="admin/category">All Categories</a></li>
-                  <li><a class="dropdown-item" href="admin/category/add-category">Add Category</a></li>
+                  <li><a class="dropdown-item" href="/admin/category">All Categories</a></li>
+                  <li><a class="dropdown-item" href="/admin/category/add-category">Add Category</a></li>
                 </ul>
             </li>
 
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="admin/products" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="/admin/products" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Product
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="admin/products">All Products</a></li>
-                  <li><a class="dropdown-item" href="admin/products/add-product">Add Product</a></li>
+                  <li><a class="dropdown-item" href="/admin/products">All Products</a></li>
+                  <li><a class="dropdown-item" href="/admin/products/add-product">Add Product</a></li>
                 </ul>
             </li>
             
