--- a/views/admin/categories/addCategory.ejs
+++ b/views/admin/categories/addCategory.ejs
@@ -18,7 +18,7 @@
         <label class="form-label" for="categoryname">Category Name</label>
         <input type="text" class="form-control " name="categoryname" id="categoryname">
       </div>
-        <input type="text" class="form-control " name="id"  id="category-id" value="<%- category._id %>" style="display: none;">
+        <!-- <input type="text" class="form-control " name="id"  id="category-id" style="display: none;"> -->
       
     </div>
     <!-- Submit button -->
