--- a/views/admin/categories/categories.ejs
+++ b/views/admin/categories/categories.ejs
@@ -61,7 +61,7 @@
                   <i class="bi bi-pencil"></i>
                   <!-- Edit -->
                 </a>
-                <button type="button" onclick="deleteCategory('<%= category._id %>','<%= category.image.filename %>')" class="btn btn-sm btn-danger">
+                <button type="button" onclick="deleteCategory('<%= category._id %>',)" class="btn btn-sm btn-danger">
                   <i class="bi bi-trash"></i>
                   <!-- Delete -->
                 </button>
